--- a/openy_lily/sass/misc/_frontpage.scss
+++ b/openy_lily/sass/misc/_frontpage.scss
@@ -42,10 +42,10 @@
       line-height: 1.3em;
       font-size: 63px;
       @include breakpoint (0 $desktop) {
-        font-size: 58px;
+        font-size: 50px;
       }
       @include breakpoint (0 $tablet-start) {
-        font-size: 44px;
+        font-size: 40px;
       }
       @include breakpoint (0 767px) {
         display: block;
